Implement submit outside Form

--- a/src/LoginForm/FormField/FormField.css
+++ b/src/LoginForm/FormField/FormField.css
@@ -4,7 +4,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
-  font-size: 0.8;
   font-weight: 300;
 }
 
@@ -18,8 +17,20 @@
   padding: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
-  border: 1px solid red;
+  border: 1px dashed red;
   font-size: 12px;
   text-align: left;
   color: red;
+  animation: enter .5s;
+}
+
+@keyframes enter {
+  from {
+    opacity: 0;
+    transform: translateY(-75%) scale(0.5);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
 }
